--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,8 @@ jobs:
       - checkout
       - run:
           command: |
+            source venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          command: |
             python manage.py test
-
