update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
       - checkout
       - run:
           command: |
+            python -m venv venv
+      - run:
+          command: |
+            source venv/bin/activate
+      - run:
+          command: |
             pip install -r requirements.txt
       - run:
           command: |
